# MPLn23d

./: .gitignore  README.md  pyproject.toml  setup.py
src/: MPLn23d.sln  MPLn23d.vcxproj  MPLn23d.vcxproj.filters  python.c  stat.c
tests/: MPLn23d.pyd
